--- a/Application/Application.csproj
+++ b/Application/Application.csproj
@@ -22,6 +22,7 @@
       <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="8.0.1" />
       <PackageReference Include="NETCore.MailKit" Version="2.1.0" />
       <PackageReference Include="Netjection" Version="1.0.7" />
+      <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
       <PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="6.6.2" />
       <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.1.2" />
     </ItemGroup>
@@ -31,6 +32,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <Folder Include="Commands\User\" />
       <Folder Include="Common\Settings\" />
       <Folder Include="Queries\Users\" />
     </ItemGroup>
