--- a/Matchmaker.API/appsettings.json
+++ b/Matchmaker.API/appsettings.json
@@ -11,6 +11,13 @@
   "ConnectionStrings": {
     "DefaultConnection": ""
   },
-  "Cors":[],
-  "LongRunningRequestTime":500
+  "Cors": [],
+  "LongRunningRequestTime": 500,
+  "Kestrel": {
+    "EndPoints": {
+      "Http": {
+        "Url": "http://+:6071"
+      }
+    }
+  }
 }
